# Nan-Ai-Client

./: .gitignore  README.md  TODO.md  blog.md  package.json  pnpm-lock.yaml  private_key.pem  tsconfig.json
.trae/rules/: project_rules.md
client/: app.json  package.json  pnpm-lock.yaml
client/api/: README.md  chat.ts  config.ts  index.ts  utils.ts
client/app/: _layout.tsx  index.tsx  onboarding.tsx  splash.tsx
client/app-example/app/: _layout.tsx
client/components/: ChatSidebar.tsx  SafeAreaContainer.tsx
client/constants/: Colors.ts  Layout.ts  Messages.ts
client/hooks/: usePresistentFn.ts
client/types/: chat.ts  document.ts  index.ts  navigation.ts
py_server/: Dockerfile  README.md  build-docker.sh  langgraph.json  main.py  pyproject.toml  python_with_statement_tutorial.md  run-docker.sh
py_server/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
py_server/src/agents/: planner.py  researcher.py  run_agent.py  supervisor.py
py_server/src/coze/: app.py  rag.py
py_server/src/db/: README.md  mongodb.py  user_api.py  user_model.py
py_server/src/graph/: builder.py
py_server/src/modals/: __init__.py  chat_modal.py
py_server/src/prompts/templates/: planner.jinja-md
py_server/src/tools/: __init__.py  coze.py  search.py  update_state.py
py_server/src/utils/: __init__.py  main.py
server/: index.ts  mcp_client.ts  origin_prompt.md  prompt.ts  types.ts  utils.ts
src/: App.tsx
src/routers/: index.tsx
src/utils/: api.ts  index.ts
(+2 files in other folders)
