[project]
name = "py-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cozepy>=0.19.0",
    "firecrawl-py>=2.16.2",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.4",
    "langgraph-supervisor>=0.0.28",
    "python-dotenv>=1.1.1",
    "socksio>=1.0.0",
]
